--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,21 @@
       border-radius: 50%;
   }
 }
+
+.wand-icon {
+  padding: 13px;
+  background-color: lightgray;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.wand-icon.rotate {
+  animation: spin 1s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
