--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,7 @@
 @import url(./../vendor/metismenu/css/metisMenu.min.css);
 
 :root {
-  --primary: #9568FF;
+  --primary: #00D094;
   --secondary: #362465;
   --secondary-dark: #22173f;
   --primary-hover: #7135ff;
