--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2462,7 +2462,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #F93A0B;
+  background-color: #00D094;
   border-color: #F93A0B; }
   .btn-primary:hover {
     color: #000;
